<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.education_app.Fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_store"
        android:name="com.example.education_app.Fragment.XpertqStoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_xpertq_store" />

    <fragment
        android:id="@+id/nav_school"
        android:name="com.example.education_app.Fragment.SchoolFragment"
        android:label="@string/menu_school"
        tools:layout="@layout/fragment_school" />

    <fragment
        android:id="@+id/nav_tutor"
        android:name="com.example.education_app.Fragment.Tutor"
        android:label="@string/menu_tutor"
        tools:layout="@layout/fragment_tutor" />

    <fragment
        android:id="@+id/nav_jobs"
        android:name="com.example.education_app.Fragment.TeacherJobs_Fragment"
        android:label="@string/menu_jobs"
        tools:layout="@layout/fragment_teacher_jobs" />

    <fragment
        android:id="@+id/nav_supply"
        android:name="com.example.education_app.Fragment.SupplyPartner_Fragment"
        android:label="@string/menu_supply"
        tools:layout="@layout/fragment_supply_partner" />


    <fragment
        android:id="@+id/nav_books"
        android:name="com.example.education_app.Fragment.BooksFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/nav_coaching"
        android:name="com.example.education_app.Fragment.NearbyCoachingFragment"
        android:label="@string/menu_coaching"
        tools:layout="@layout/fragment_nearby_coaching" />

    <fragment
        android:id="@+id/nav_privateTutors"
        android:name="com.example.education_app.Fragment.PrivateTutorsFragment"
        android:label="@string/menu_privateTutors"
        tools:layout="@layout/fragment_private_tutors" />

    <fragment
        android:id="@+id/nav_nearby_school"
        android:name="com.example.education_app.Fragment.NearbySchoolFragment"
        android:label="@string/menu_nearby_school"
        tools:layout="@layout/fragment_nearby_school" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.education_app.Fragment.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_order_history"
        android:name="com.example.education_app.Fragment.OrderFragment"
        android:label="@string/menu_order_history"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_order_track"
        android:name="com.example.education_app.Fragment.TrackOrderFragment"
        android:label="@string/menu_order_track"
        tools:layout="@layout/fragment_track_order" />

    <fragment
        android:id="@+id/nav_invite_earn"
        android:name="com.example.education_app.Fragment.InviteEarnFragment"
        android:label="@string/menu_invite_earn"
        tools:layout="@layout/fragment_invite_earn" />


</navigation>